[package]
name = "NetworkScanner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
features = "0.10.0"
futures = "0.3.28"
ipnet = "2.8.0"
netscan = { version = "0.20.0", features = ["full"] }
tokio = { version = "1.33.0", features = ["full"] }
local-ip-address = "0.5.6"
clap = { version = "4.4.6", features = ["derive", "env", "string", "cargo"] }
clap-cargo = "0.13.0"
ring = "0.17.3"
tokio-postgres = "0.7.10"
postgres-protocol = "0.6.6"
byteorder = "1.5.0"
sudo = "0.6.0"
